--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 	<title>Personal Web</title>
-	<link rel="stylesheet" type="text/css" href="personalfeb.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
